<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".TelaCadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="348dp"
        android:layout_height="187dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_altadefinicao" />

    <EditText
        android:id="@+id/NameCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:background="@android:drawable/bottom_bar"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/NameCadastro"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/EmailCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:background="@android:drawable/bottom_bar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EmailCadastro"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameCadastro" />

    <EditText
        android:id="@+id/PhoneCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:background="@android:drawable/bottom_bar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TelefoneCadastro"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmarSenhaCadastro" />

    <EditText
        android:id="@+id/CpfCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:background="@android:drawable/bottom_bar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/CpfPadrao"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneCadastro" />

    <EditText
        android:id="@+id/SenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:background="@android:drawable/bottom_bar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SenhaCadastro"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailCadastro" />

    <EditText
        android:id="@+id/ConfirmarSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:background="@android:drawable/bottom_bar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ConfirmarSenhaCadastro"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SenhaCadastro" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="150dp"
        android:background="@android:drawable/progress_horizontal"
        android:hint="@string/EnviaCadastro"
        android:textColorHint="@color/white"
        app:backgroundTint="?attr/colorControlHighlight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CpfCadastro" />


    </LinearLayout>
</ScrollView>