<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_altadefinicao" />
        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="320dp"
            android:layout_marginLeft="45dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/bottom_bar"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/EmailLogin"
            android:inputType="textEmailAddress"
            android:rotationY="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="45dp"
            android:background="@android:drawable/bottom_bar"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/padraoSenha"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="148dp"
            android:layout_height="45dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="24dp"
            android:background="@android:drawable/progress_horizontal"
            android:text="@string/padraoLogin"
            app:backgroundTint="?attr/colorControlHighlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

        <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="148dp"
            android:layout_height="45dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="2dp"
            android:background="@android:drawable/progress_horizontal"
            android:text="@string/padraoCadastro"
            app:backgroundTint="?attr/colorControlHighlight"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


    </LinearLayout>>

</ScrollView>